--- a/src/main/resources/static/css/mypage/account.css
+++ b/src/main/resources/static/css/mypage/account.css
@@ -1,20 +1,3 @@
-.head {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #ddd;
-}
-
-.head img {
-    height: 40px;
-}
-
-.head h1 {
-    margin: 0;
-    font-size: 24px;
-}
-
 .head .logout {
     border: 1px solid var(--grey);
     background-color: white;
@@ -73,13 +56,8 @@
     padding: 10px 20px;
     cursor: pointer;
 }
-
-.change-userinfo{
-	background-color: var(--main-orange);
-	color: white;
-	width: 100%;
-	height: 50px;
-	border:0;
+.find-postalcode{
+	margin-right: 10px;
 }
 
 .info-form .postalcode {
@@ -92,10 +70,21 @@
 
 .info-form .checkbox-group {
     display: flex;
-    flex-wrap: wrap;
 }
 
 .info-form .checkbox-group label {
     flex: 1 1 100px;
     margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.change-userinfo{
+	background-color: var(--main-orange);
+	color: white;
+	width: 100%;
+	border:0;
+	font-size: 18px;
+    margin-top: 20px;
+    padding: 15px 20px;
+    cursor: pointer;
 }
