--- a/src/main/resources/static/css/mypage/sidebar.css
+++ b/src/main/resources/static/css/mypage/sidebar.css
@@ -1,3 +1,34 @@
+/* 사이드바 아닌 공통 부분 */
+h1 {
+	margin: 0;
+    font-size: 24px;
+}
+
+.main-content {
+    flex: 1;
+    background-color: #fff;
+    padding: 20px;
+    padding-left: 0;
+}
+
+.container-main {
+    margin: auto;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ddd;
+    margin-left : 5px;
+}
+
+
+/* 사이드바 */
 .sidebar {
 	width: 250px;
 	padding: 20px;
@@ -52,17 +83,4 @@
 
 .menu a:hover {
 	background-color: #ccc;
-}
-
-.main-content {
-    flex: 1;
-    background-color: #fff;
-    padding: 20px;
-}
-
-.container-main {
-    margin: auto;
-    background-color: white;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
