--- a/src/main/resources/templates/views/mypage/account.html
+++ b/src/main/resources/templates/views/mypage/account.html
@@ -11,42 +11,36 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
         <div class="main-content">
             <div class="container-main">
 		        <div class="head">
-		            <img src="/img/Untitled_removebg_preview.png">
 		            <h1>회원정보</h1>
 		            <button class="logout">로그아웃</button>
 		        </div>
 		        
 		        <section class="info-section">
 		            <div class="info-box">
-		                <p>* 표시로 기재된 보이는 정보는 정보통의 확인 및 수정해주시길 바랍니다.</p>
-		                <p>이중 일부 백업 데이터로 전송되고 회원님의 "회원탈퇴" 또는 "이메일거부" 인증해 주시기 바랍니다.</p>
+		                <p>* 표시로 보이는 정보는 아래 "숨은 정보 업데이트" 버튼을 클릭하고 비밀번호 인증 후 수정 가능합니다.</p>
+		                <p></p>
 		                <button class="update-button">숨은 정보 업데이트</button>
 		            </div>
 		
 		            <form class="info-form">
 		                <div class="form-group">
 		                    <label for="userId">아이디</label>
-		                    <input type="text" id="userId" value="sksl69" disabled>
+		                    <input type="text" id="userId" value="yujin5232" disabled>
 		                </div>
 		
 		                <div class="form-group">
-		                    <label for="nickname">닉네임</label>
-		                    <input type="text" id="nickname" value="김도영">
+		                    <label for="nickname">이름</label>
+		                    <input type="text" id="nickname" value="이유진">
 		                </div>
 		
 		                <div class="form-group">
-		                    <label for="name">이름</label>
-		                    <input type="text" id="name" value="강*영" disabled>
+		                    <label for="rrn">주민등록번호</label>
+		                    <input type="text" id="rrn" value="******-*******" disabled>
 		                </div>
 		
 		                <div class="form-group">
 		                    <label for="gender">성별</label>
 		                    <input type="text" id="gender" value="여" disabled>
-		                </div>
-		
-		                <div class="form-group">
-		                    <label for="verification">본인인증</label>
-		                    <input type="text" id="verification" value="휴대폰 인증" disabled>
 		                </div>
 		
 		                <div class="form-group">
@@ -75,12 +69,20 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 		
 		                <div class="form-group">
 		                    <label for="email">이메일 주소</label>
-		                    <input type="text" id="email" value="s***6@naver.com">
+		                    <input type="text" id="email" value="y***2@naver.com">
 		                    <button class="edit-email">수정</button>
 		                </div>
 		
 		                <div class="form-group">
 		                    <label>이메일 수신 동의</label>
+		                    <div class="checkbox-group">
+		                        <label><input type="checkbox"> 동의</label>
+		                        <label><input type="checkbox"> 거부</label>
+		                    </div>
+		                </div>
+		                
+		                <div class="form-group">
+		                    <label>SMS 수신 동의</label>
 		                    <div class="checkbox-group">
 		                        <label><input type="checkbox"> 동의</label>
 		                        <label><input type="checkbox"> 거부</label>
