--- a/src/main/resources/templates/views/login/login.html
+++ b/src/main/resources/templates/views/login/login.html
@@ -1,91 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="UTF-8">
-	<title>북북 로그인</title>
-	<link rel="stylesheet" href="/css/login/login.css">
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>북북 로그인</title>
+    <link rel="stylesheet" href="/css/login/login.css">
 </head>
 
 <body>
 
-	<div class="main">
-	
-		<header>
-		 <a href="/">
-			<div class="logo">
-			<img src="/img/Untitled_removebg_preview.png" class="image">			
-			</div>
-			</a>
-		</header>
-		        <section class="login-buttons-wrap">
+    <div class="main">
+
+        <header>
+            <a href="/">
+                <div class="logo">
+                    <img src="/img/Untitled_removebg_preview.png" class="image" alt="Logo" />
+                </div>
+            </a>
+        </header>
+
+        <section class="login-buttons-wrap">
             <button class="login-btn" onclick="window.location.href='/login'">회원 로그인</button>
-            <button class="login-btn admin-login-btn" onclick="window.location.href='/login-admin'">판매자 로그인</button>
+            <button class="login-btn admin-login-btn" onclick="window.location.href='/login/admin'">판매자 로그인</button>
         </section>
-		<!--로그인 부분-->
-		<section class="login-wrap">
 
-			<div class="login-id-wrap">
-				<input id="input-id" placeholder="아이디" type="text"></input>
-			</div>
-			<div class="login-pw-wrap">
-				<input id="input-pw" placeholder="비밀번호" type="password"></input>
-			</div>
-			<div class="login-btn-wrap">
-				<button id="login-btn">로그인</button>
-			</div>
-			
-			<div class="under-login">
-			</div>
+        <!-- 로그인 부분 -->
+        <section class="login-wrap">
+            <form action="/login" method="post">			
+					<input type="hidden" th:if="${_csrf != null}" name="${_csrf.parameterName}" th:value="${_csrf.token}"  />
+				<div class="login-id-wrap">
+                    <input id="input-id" name="email" placeholder="아이디" type="text" required />
+                </div>
+                <div class="login-pw-wrap">
+                    <input id="input-pw" name="password" placeholder="비밀번호" type="password" required />
+                </div>
+                <div class="login-btn-wrap">
+                    <button id="login-btn" type="submit">로그인</button>
+                </div>
+            
+            </form>
 
-		</section>
+            <div class="under-login">
+            </div>
+        </section>
 
-		<!--간편한 로그인 부분-->
-		<section id="easy-login-wrap">
+        <!-- 간편한 로그인 부분 -->
+        <section id="easy-login-wrap">
+            <div class="easy-login">
+                <p id="easy-login-text">더욱 간편한 로그인</p>
+            </div>
+            <div id="easy-login-wrap-ko">
+                <div class="easy-login-box">
+                    <div class="kakao-login-ko">
+                        <img src="/img/kakao.png" alt="Kakao Login">
+                        <a href="https://kauth.kakao.com/oauth/authorize" target="_blank" title="카카오 아이디로 로그인">카카오 아이디로 로그인</a>
+                    </div>
+                    <div class="naver-login-ko">
+                        <img src="/img/naver.png" alt="Naver Login">
+                        <a href="https://nid.naver.com/nidlogin.login" target="_blank" title="네이버 아이디로 로그인">네이버 아이디로 로그인</a>
+                    </div>
+                    <div class="google-login-ko">
+                        <img src="/img/google.png" alt="Google Login">
+                        <a href="https://accounts.google.com/o/oauth2/auth" target="_blank" title="구글 아이디로 로그인">구글 아이디로 로그인</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-			<div class="easy-login">
-				<p id="easy-login-text">더욱 간편한 로그인</p>
-			</div>
+        <!-- 아이디/PW 찾기 및 회원가입 부분 -->
+        <section class="find-signup-wrap">
+            <div id="find-signup-wrap-ko">
+                <span class="find-id"><a href="./find-id">아이디찾기</a></span>
+                <span class="find-pw"><a href="./find-password">비밀번호 찾기</a></span>
+                <span class="sign-up"><a href="./signup">회원가입</a></span>
+            </div>
+        </section>
 
-			<div id="easy-login-wrap-ko">
-    <div class="easy-login-box">
-        <div class="kakao-login-ko">
-            <img src="/img/kakao.png" alt="Kakao Login">
-            <a href="https://kauth.kakao.com/oauth/authorize" target="_blank" title="카카오 아이디로 로그인">카카오 아이디로 로그인</a>
-        </div>
-        <div class="naver-login-ko">
-            <img src="/img/naver.png" alt="Naver Login">
-            <a href="https://nid.naver.com/nidlogin.login" target="_blank" title="네이버 아이디로 로그인">네이버 아이디로 로그인</a>
-        </div>
-        <div class="google-login-ko">
-    <img src="/img/google.png" alt="Google Login">
-    <a href="https://accounts.google.com/o/oauth2/auth" target="_blank" title="구글 아이디로 로그인">구글 아이디로 로그인</a>
-</div>
-        
     </div>
-</div>
-
-		</section>
-
-		<!--class,PW 찾기 및 회원가입 부분-->
-		<section class="find-signup-wrap">
-
-			<div id="find-signup-wrap-ko">
-				<span class="find-id">아이디찾기</span>
-				<span class="find-pw">비밀번호 찾기	</span>
-
-
-				<span class="sign-up">
-					<a href="./signup">회원가입</a>
-				</span>
-			</div>
-
-		</section>
-
-		
-	</div>
 
 </body>
-
 </html>
