--- a/src/main/resources/templates/views/login/additional-info.html
+++ b/src/main/resources/templates/views/login/additional-info.html
@@ -6,6 +6,7 @@
     <title>추가 정보 입력</title>
     <link rel="stylesheet" href="/css/login/signup.css">
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script src="/js/login/signup.js"></script>
     <script src="/js/login/address.js"></script>
 </head>
 <body>
@@ -77,7 +78,7 @@
                     </div>
 
                     <div class="signup-btn-wrap">
-                        <button id="signup-btn" type="submit">제출</button>
+                        <button id="signup-btn" type="submit">가입</button>
                     </div>
                 </div>
             </form>
