--- a/src/main/resources/static/css/common/header.css
+++ b/src/main/resources/static/css/common/header.css
@@ -2,6 +2,7 @@ body {
 	margin: 0 auto;
 	height: 100%;
 }
+
 header, main {
 	width: 1200px;
 	margin: 0 auto;
@@ -36,21 +37,56 @@ header, main {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	padding-right: 10px;
 }
-.logo{
+
+.logo {
 	height: 70px;
 }
+
 .search-container {
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	border: 1.5px solid var(--main-orange);
 	border-radius: 25px; /* 타원형 모양을 위해 border-radius를 크게 설정 */
 	padding: 5px 10px;
 	width: 550px;
 	height: 40px;
 	margin: 0 30px;
-	margin-top : 10px;
+	flex-grow: 1;
+	margin-top: 10px;
 	background-color: white;
+	margin: 0 20px;
+}
+
+.search-container form {
+	display: flex;
+	align-items: center;
+	background-color: #fff;
+	border-radius: 20px;
+	padding: 5px 10px;
+}
+
+.search-container select, .search-container input[type="text"],
+	.search-container button {
+	border: none;
+	background: none;
+	outline: none;
+}
+
+.search-container select {
+	padding-right: 10px;
+}
+
+.search-container input[type="text"] {
+	flex-grow: 1;
+	padding: 5px;
+}
+
+.search-container button {
+	cursor: pointer;
+	padding: 5px;
 }
 
 .search-tull .section select {
@@ -84,147 +120,148 @@ header, main {
 	list-style: none;
 	display: flex;
 	margin: 0;
+	padding: 0;
 }
 
-.header-middle-right ul li {
-	padding: 15px;
+.header-middle-right li {
+	margin-left: 15px;
 }
 
 .header-middle-right ul li a {
 	color: #333;
+	text-decoration: none;
 }
-.header-middle-right > ul > li > a > i{
+
+.header-middle-right>ul>li>a>i {
 	font-size: 30px;
+	margin-left: 10px;
 }
 
 /*헤더 - 하  */
 .header-bottom {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    border-top: 1px solid var(--grey);
-    border-bottom: 1px solid var(--grey);
+	display: flex;
+	align-items: center;
+	padding: 10px;
+	border-top: 1px solid var(--grey);
+	border-bottom: 1px solid var(--grey);
 }
 
 .header-bottom ul {
-    display: flex;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+	display: flex;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
 
 .header-bottom li {
-    margin-right: 20px;
-    cursor: pointer;
+	margin-right: 20px;
+	cursor: pointer;
 }
 
 .dropdown {
-    position: relative;
-    display: inline-block;
+	position: relative;
+	display: inline-block;
 }
 
 #categoryButton {
-    background-color: white;
-    margin-right: 20px;
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
+	background-color: white;
+	margin-right: 20px;
+	padding: 10px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 600px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 600px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
 }
 
 .category-container {
-    display: flex;
-    padding: 20px;
+	display: flex;
+	padding: 20px;
 }
 
 .category-column {
-    padding: 0 10px;
+	padding: 0 10px;
 }
 
 .main-categories {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 
 .category-box {
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s;
+	padding: 10px;
+	cursor: pointer;
+	border-radius: 5px;
+	transition: background-color 0.3s;
 }
 
 .category-box:hover {
-    background-color: #d4d4d4;
+	background-color: #d4d4d4;
 }
 
 .category-column:last-child {
-    flex: 1;
-    border-left: 1px solid #ddd;
-    padding-left: 20px;
+	flex: 1;
+	border-left: 1px solid #ddd;
+	padding-left: 20px;
 }
 
 .category-column h3 {
-    margin-top: 0;
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 10px;
+	margin-top: 0;
+	border-bottom: 1px solid #ddd;
+	padding-bottom: 10px;
 }
 
 .category-column ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
 }
 
 .category-column li {
-    padding: 5px 0;
-    cursor: pointer;
+	padding: 5px 0;
+	cursor: pointer;
 }
 
 .category-column li:hover {
-    background-color: #f1f1f1;
+	background-color: #f1f1f1;
 }
 
 .show {
-    display: block;
+	display: block;
 }
 
 /* 로그인,로그아웃 설정 */
-
 .header-top .user-info span {
-    color: var(--black);
-    font-size: 12px; /* 다른 링크들과 동일한 폰트 크기 */
-    font-weight: 500; /* 다른 링크들과 동일한 폰트 굵기 */
+	color: var(--black);
+	font-size: 12px; /* 다른 링크들과 동일한 폰트 크기 */
+	font-weight: 500; /* 다른 링크들과 동일한 폰트 굵기 */
 }
 
 .header-top .logout-form {
-    display: inline-block;
-    margin-left: 15px; /* 다른 li 요소들과 간격을 맞춤 */
+	display: inline-block;
+	margin-left: 15px; /* 다른 li 요소들과 간격을 맞춤 */
 }
 
 .header-top .logout-form form {
-    margin: 0;
-    padding: 0;
-    display: inline-block;
+	margin: 0;
+	padding: 0;
+	display: inline-block;
 }
 
 .header-top .logout-form button {
-    background: none;
-    border: none;
-    color: var(--black);
-    font-size: 12px;
-    font-weight: 500;
-    cursor: pointer;
-    padding: 0;
+	background: none;
+	border: none;
+	color: var(--black);
+	font-size: 12px;
+	font-weight: 500;
+	cursor: pointer;
+	padding: 0;
 }
-
-
