--- a/src/main/resources/templates/views/commons/common.html
+++ b/src/main/resources/templates/views/commons/common.html
@@ -2,51 +2,43 @@
 
 <header th:fragment="top">
 	<div id="header-box">
-        <div class="header-top">
-        <ul>
-            <li sec:authorize="isAnonymous()"><a href="/signup">회원가입</a></li>
-            <li sec:authorize="isAnonymous()"><a href="/login">로그인</a></li>
-            <li sec:authorize="isAuthenticated()" class="user-info">
-                <span th:text="${#authentication.principal.name}"></span>
-                <span th:text="${#authentication.principal.email}"></span>
-            </li>
-            <li sec:authorize="isAuthenticated()" class="logout-form">
-                <form action="/logout" method="post">
-                    <input type="hidden" th:name="${_csrf != null ? _csrf.parameterName : 'csrf'}"
-                           th:value="${_csrf != null ? _csrf.token : ''}"/>
-                    <button type="submit">로그아웃</button>
-                </form>
-            </li>
-            <li><a href="/mypage/orders">주문배송</a></li>
-            <li><a href="/mypage/questions">고객센터</a></li>
-        </ul>
-    </div>
-</div>
-		<div class="containers">
-			<div class="flex a-center">
-				<a href="/"><img src="/img/Untitled_removebg_preview.png"
-					class="logo" alt="로고"></a>
-				<div class="search-container">
-					<form th:action="@{/search}" method="get">
-						<div class="search-tull">
-							<div class="section">
-								<select name="searchType" title="검색유형선택">
-									<option>통합검색</option>
-									<option>베스트셀러</option>
-									<option>교보문고</option>
-									<option>이벤트</option>
-								</select>
-							</div>
-						</div>
-						<div>
-							<input type="text" name="query" title="통합검색어 입력"
-								placeholder="왜 세계는 10대의 SNS를 금지하나">
-						</div>
-						<button type="submit">
-							<i class="fa-solid fa-magnifying-glass"></i>
-						</button>
+		<div class="header-top">
+			<ul>
+				<li sec:authorize="isAnonymous()"><a href="/signup">회원가입</a></li>
+				<li sec:authorize="isAnonymous()"><a href="/login">로그인</a></li>
+				<li sec:authorize="isAuthenticated()" class="user-info"><span
+					th:text="${#authentication.principal.name}"></span> <span
+					th:text="${#authentication.principal.email}"></span></li>
+				<li sec:authorize="isAuthenticated()" class="logout-form">
+					<form action="/logout" method="post">
+						<input type="hidden"
+							th:name="${_csrf != null ? _csrf.parameterName : 'csrf'}"
+							th:value="${_csrf != null ? _csrf.token : ''}" />
+						<button type="submit">로그아웃</button>
 					</form>
-				</div>
+				</li>
+				<li><a href="/mypage/orders">주문배송</a></li>
+				<li><a href="/mypage/questions">고객센터</a></li>
+			</ul>
+		</div>
+	</div>
+	<div class="containers">
+		<div class="flex a-center">
+			<a href="/"><img src="/img/Untitled_removebg_preview.png"
+				class="logo" alt="로고"></a>
+			<div class="search-container">
+				<form th:action="@{/search}" method="get">
+					<select name="searchType" title="검색유형선택">
+						<option>통합검색</option>
+						<option>베스트셀러</option>
+						<option>교보문고</option>
+						<option>이벤트</option>
+					</select> <input type="text" name="query" title="통합검색어 입력"
+						placeholder="왜 세계는 10대의 SNS를 금지하나">
+					<button type="submit">
+						<i class="fa-solid fa-magnifying-glass"></i>
+					</button>
+				</form>
 			</div>
 		</div>
 		<div class="header-middle-right">
